[gd_scene load_steps=7 format=3 uid="uid://crgt2yy770ew"]

[ext_resource type="Script" path="res://scripts/inventory/inv_ui_item.gd" id="1_rdg3e"]
[ext_resource type="Texture2D" uid="uid://ce240vla3ijiq" path="res://textures/icons/tap.svg" id="2_3hb84"]
[ext_resource type="Texture2D" uid="uid://drdo4hkaeidxc" path="res://textures/items/berries.svg" id="2_apcv6"]
[ext_resource type="Texture2D" uid="uid://bd8n3sevuinfd" path="res://textures/icons/trash.svg" id="3_vlcjv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ktwwt"]

[sub_resource type="LabelSettings" id="LabelSettings_re0rv"]
font_size = 14
font_color = Color(0.721569, 0.721569, 0.721569, 1)

[node name="InvItem" type="PanelContainer"]
offset_right = 51.0
offset_bottom = 26.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ktwwt")
script = ExtResource("1_rdg3e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("2_apcv6")
expand_mode = 1
stretch_mode = 5

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Name"
label_settings = SubResource("LabelSettings_re0rv")
vertical_alignment = 1

[node name="Use" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("2_3hb84")
ignore_texture_size = true
stretch_mode = 5

[node name="Trash" type="TextureButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("3_vlcjv")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/HBoxContainer/Use" to="." method="on_use_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Trash" to="." method="on_trash_pressed"]
